--- a/text/3-technologie.tex
+++ b/text/3-technologie.tex
@@ -1,7 +1,7 @@
 \chapter{Použité technologie}
 \label{3-technologie}
 
-V této kapitole budou popsány technologie použité pro tvorbu softwarového nástroje, jež je předmětem této bakalářské práce. Implementace byla provedena v programovacím jazyku Python s využitím grafického frameworku PyQt a QGIS API (rozhraní pro programování aplikací).  
+V~této kapitole budou popsány technologie použité pro tvorbu softwarového nástroje, jež je předmětem této bakalářské práce. Implementace byla provedena v~programovacím jazyku Python s~využitím grafického frameworku PyQt a QGIS API (rozhraní pro programování aplikací).  
 
 \section{Python}
 \begin{figure}[H]
@@ -11,8 +11,8 @@ V této kapitole budou popsány technologie použité pro tvorbu softwarového n
       \label{fig:python}
 \end{figure}
   
-Python je objektově orientovaným skriptovacím jazykem zkompilovatelným téměr na každé platformě. Oceňován programátory (především začátečníky) je pro svou jednoduchou a velice schopnou syntax, například také díky dynamickému typování (nepožaduje specifikaci datového typu u proměnných). Dále jeho objektový model podporuje polymorfismus, přetěžování operátorů a vícenásobnou dědičnost. Hlavním důvodem, proč je zařazován mezi skriptovací jazyky je jeho integrace s jazykem C. Díky knihovnám Python/C API lze z programů v Pythonu volat kód psaný v C nebo naopak, pro aplikace psané v C je možné integrovat interpret Pythonu. 
-Python bývá označován jako "spustitelný pseudokód" - syntaxe se snaží vyhnout složitým zápisům a znakům ($\$, <<, \&\&, ?$), inspiruje se v matematice zápisem abstraktních algoritmů.\cite{learningPython}
+Python je objektově orientovaným skriptovacím jazykem zkompilovatelným téměr na každé platformě. Oceňován programátory (především začátečníky) je pro svou jednoduchou a velice schopnou syntax, například také díky dynamickému typování (nepožaduje specifikaci datového typu u~proměnných). Dále jeho objektový model podporuje polymorfismus, přetěžování operátorů a vícenásobnou dědičnost. Hlavním důvodem, proč je zařazován mezi skriptovací jazyky je jeho integrace s~jazykem C. Díky knihovnám Python/C API lze z~programů v~Pythonu volat kód psaný v~C nebo naopak, pro aplikace psané v~C je možné integrovat interpret Pythonu. 
+Python bývá označován jako "spustitelný pseudokód" - syntaxe se snaží vyhnout složitým zápisům a znakům ($\$, <<, \&\&, ?$), inspiruje se v~matematice zápisem abstraktních algoritmů.\cite{learningPython}
 
 Jazyk Python byl navržen koncem 80. let nizozemským počítačovým programátorem Guido van Rossumem. První verzi (0.9.0) uveřejnil začátkem roku 1991. Hlavní principy Pythonu, které zakladatel jazyka prosazuje, byly shrnuty do podoby 20 aforismů (\textit{"Zen of Python, by Tim Peters"}), např.:
 
@@ -28,7 +28,7 @@ Jazyk Python byl navržen koncem 80. let nizozemským počítačovým programát
 		\textit{Měl by existovat jeden - a pokud možno pouze jeden - zřejmý způsob jak to udělat. (There should be one - and preferably only one - obvious way to do it.)}
 \end{itemize}  
 
-Pro výpis anglického originálu Zenu stačí do konzole Pythonu napsat \\ \texttt{$>>>$~\textbf{import}~this}. Od roku 2008 je vyvíjena řada Pythonu 3, která se snaží naplnit právě poslední ze zmiňovaných aforismů, kdy důraz je kladen na odstranění duplicitních programových konstrukcí a modulů. Python 3 není plně zpětně kompatibilní s řadou 2, softwary napsané a využívající Python 2 postupně přecházejí na jeho novou verzi (i QGIS s připravovanou verzí QGIS 3.0). Pro zajímavost, jazyk byl pojmenován podle britské komediální skupiny Monty Python. \cite{pythonHistory}
+Pro výpis anglického originálu Zenu stačí do konzole Pythonu napsat \\ \texttt{$>>>$~\textbf{import}~this}. Od roku 2008 je vyvíjena řada Pythonu 3, která se snaží naplnit právě poslední ze zmiňovaných aforismů, kdy důraz je kladen na odstranění duplicitních programových konstrukcí a modulů. Python 3 není plně zpětně kompatibilní s~řadou 2, softwary napsané a využívající Python 2 postupně přecházejí na jeho novou verzi (i QGIS s~připravovanou verzí QGIS 3.0). Pro zajímavost, jazyk byl pojmenován podle britské komediální skupiny Monty Python. \cite{pythonHistory}
 
 \section{Qt}
 
@@ -39,10 +39,10 @@ Pro výpis anglického originálu Zenu stačí do konzole Pythonu napsat \\ \tex
       \label{fig:python}
 \end{figure}
 
-Qt je aplikační vývojový framework umožňující multiplatformní produkci aplikací s grafickým uživatelským rozhraním (\zk{GUI}). Qt dále nabízí mnoho multiplatformních vývojových nástrojů pro usnadnění vývoje aplikací pomocí této technologie. Vedle vývojového prostředí Qt Creator (umožňuje kompletní vývoj aplikací) a dalších, je to samostatný nástroj pro tvorbu \zk{GUI} Qt Designer, který byl využíván při tvorbě vytvářeného softwarového nástroje. \cite{qt}
+Qt je aplikační vývojový framework umožňující multiplatformní produkci aplikací s~grafickým uživatelským rozhraním (\zk{GUI}). Qt dále nabízí mnoho multiplatformních vývojových nástrojů pro usnadnění vývoje aplikací pomocí této technologie. Vedle vývojového prostředí Qt Creator (umožňuje kompletní vývoj aplikací) a dalších, je to samostatný nástroj pro tvorbu \zk{GUI} Qt Designer, který byl využíván při tvorbě vytvářeného softwarového nástroje. \cite{qt}
 
 \section{PyQt}
-PyQt je propojení Pythonu jako programovacího jazyka a Qt jako frameworku poskytujícího nástroj pro tvorbu \zk{GUI}. Kombinace Pythonu a Qt umožňuje vyvíjet aplikace, které jsou kompatibilní s většinou používaných platforem a otevírá dveře začátečníkům díky jednoduchosti, přehlednosti a síle Pythonu. PyQt je používán pro vývoj všech druhů grafických aplikací, od programů pro vedení účetnictví přes vědci užívané softwarové nástroje pro tvorbu vizualizací až po počítačové hry. \cite{rapidPyQt}
+PyQt je propojení Pythonu jako programovacího jazyka a Qt jako frameworku poskytujícího nástroj pro tvorbu \zk{GUI}. Kombinace Pythonu a Qt umožňuje vyvíjet aplikace, které jsou kompatibilní s~většinou používaných platforem a otevírá dveře začátečníkům díky jednoduchosti, přehlednosti a síle Pythonu. PyQt je používán pro vývoj všech druhů grafických aplikací, od programů pro vedení účetnictví přes vědci užívané softwarové nástroje pro tvorbu vizualizací až po počítačové hry. \cite{rapidPyQt}
 
 \section{QGIS}
 
@@ -53,7 +53,7 @@ PyQt je propojení Pythonu jako programovacího jazyka a Qt jako frameworku posk
       \label{fig:qgis}
 \end{figure}
  
-QGIS je multiplatformní geografický informační systém (\zk{GIS}) vyvíjený jako Open Source šířený pod Obecnou veřejnou licencí GNU (\zk{GNU GPL} - GNU General Public License). \zk{GNU GPL} zaručuje svobodu jeho sdílení a úprav, které vedou k implementaci nových funkcionalit a k jeho zdokonalení. To z něj činí mocný nástroj používaný ve veřejném i soukromém sektoru. QGIS je psán v programovacím jazyku C++, jeho grafické uživatelské rozhraní je postaveno na knihovně Qt. Projekt QGIS započal v roce 2002, verze 1.0 byla uveřejněna roku 2009. QGIS disponuje nepřeberným množstvím zásuvných modulů (pluginů) rozšiřujících funkčnost softwaru. Pluginy jsou programovány v jazyku C++ nebo Python. \cite{masteringQgis}
+QGIS je multiplatformní geografický informační systém (\zk{GIS}) vyvíjený jako Open Source šířený pod Obecnou veřejnou licencí GNU (\zk{GNU GPL} - GNU General Public License). \zk{GNU GPL} zaručuje svobodu jeho sdílení a úprav, které vedou k~implementaci nových funkcionalit a k~jeho zdokonalení. To z~něj činí mocný nástroj používaný ve veřejném i soukromém sektoru. QGIS je psán v~programovacím jazyku C++, jeho grafické uživatelské rozhraní je postaveno na knihovně Qt. Projekt QGIS započal v~roce 2002, verze 1.0 byla uveřejněna roku 2009. QGIS disponuje nepřeberným množstvím zásuvných modulů (pluginů) rozšiřujících funkčnost softwaru. Pluginy jsou programovány v~jazyku C++ nebo Python. \cite{masteringQgis}
 
 
 
