text: fill paragraphs to 80 characters

--- a/text/5-zaver.tex
+++ b/text/5-zaver.tex
@@ -1,16 +1,37 @@
 \chapter{Závěr}
 \label{5-zaver}
 
-Hlavním cílem této bakalářské práce byla implementace zásuvného modulu do QGIS rozšiřujícího softwarové vybavení Státního ústavu pro radiační ochranu v.v.i. (i jiných institucí). Nástroj poslouží jako další prostředek k~zrychlení reakční doby při cvičeních radiačních havárií příp. při samotných radiačních haváriích a především k~zvýšení bezpečnosti mobilních skupin pracujících přímo v~terénu. Dále si práce kladla za cíl seznámit čtenáře s~dopady ionizujícího záření na lidský organismus a s~metodou pozemního snímání radiace. 
+Hlavním cílem této bakalářské práce byla implementace zásuvného modulu
+do QGIS rozšiřujícího softwarové vybavení Státního ústavu pro radiační
+ochranu v.v.i. (i jiných institucí). Nástroj poslouží jako další
+prostředek k~zrychlení reakční doby při cvičeních radiačních havárií
+příp. při samotných radiačních haváriích a především k~zvýšení
+bezpečnosti mobilních skupin pracujících přímo v~terénu. Dále si práce
+kladla za cíl seznámit čtenáře s~dopady ionizujícího záření na lidský
+organismus a s~metodou pozemního snímání radiace.
 
-Vytvářený nástroj ze vstupní interpolované mapy dávkových příkonů gama záření vyextrahuje data na dané trase a spočte několik základních statistik. Zejména se jedná o~celkovou dávku gama záření, kterou mobilní skupina na trase obdrží. V~případě překročení mezních hodnot obdržené dávky, které již ohrožují na zdraví, je možné pomocí dalších výsledků výpočtu vytipovat místa na trase, kterým se vyhnout a tedy trasu monitorování modifikovat. 
+Vytvářený nástroj ze vstupní interpolované mapy dávkových příkonů gama
+záření vyextrahuje data na dané trase a spočte několik základních
+statistik. Zejména se jedná o~celkovou dávku gama záření, kterou
+mobilní skupina na trase obdrží. V~případě překročení mezních hodnot
+obdržené dávky, které již ohrožují na zdraví, je možné pomocí dalších
+výsledků výpočtu vytipovat místa na trase, kterým se vyhnout a tedy
+trasu monitorování modifikovat.
 
-Nástroj byl s~pomocí návrhů a požadavků na úpravy od pracovníků \zk{SÚRO} vytvořen na míru tak, aby splnil očekávání a byl zároveň co nejvíce intuitivní. Nástroj byl vytvořen v~anglickém jazyce s~vidinou jeho využití i v~jiných než českých institucích. Zároveň byl v~angličtině vytvořen návod na jeho používání. 
+Nástroj byl s~pomocí návrhů a požadavků na úpravy od pracovníků
+\zk{SÚRO} vytvořen na míru tak, aby splnil očekávání a byl zároveň co
+nejvíce intuitivní. Nástroj byl vytvořen v~anglickém jazyce s~vidinou
+jeho využití i v~jiných než českých institucích. Zároveň byl
+v~angličtině vytvořen návod na jeho používání.
 
 
-\section{Licence a dostupnost zásuvného modulu}
-Zásuvný modul byl vytvořen pod licencí \zk{GNU GPL}, kterou podědil po QGIS knihovnách, jež byly k~implementaci využity. Zásuvný modul je volně dostupný z~CTU GeoForAll Lab QGIS repozitáře\footnote{\texttt{https://ctu-geoforall-lab-projects.github.io/bp-kala-2017/}}. V~budoucnu je dále v~plánu začlenění zásuvného modulu do oficiálního QGIS repozitáře.
-
+\section{Licence a dostupnost zásuvného modulu} Zásuvný modul byl
+vytvořen pod licencí \zk{GNU GPL}, kterou podědil po QGIS knihovnách,
+jež byly k~implementaci využity. Zásuvný modul je volně dostupný z~CTU
+GeoForAll Lab QGIS
+repozitáře\footnote{\texttt{https://ctu-geoforall-lab-projects.github.io/bp-kala-2017/}}. V~budoucnu
+je dále v~plánu začlenění zásuvného modulu do oficiálního QGIS
+repozitáře.
 
  
 
